--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/HAZEL-2B/BACKEND.git"
+  },
+  "bugs": {
+    "url": "https://github.com/HAZEL-2B/BACKEND/issues"
+  },
+  "homepage": "https://github.com/HAZEL-2B/BACKEND#readme"
 }
